fix: lack of spacing between countries in a project card

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -31,6 +31,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: left;
+  margin-bottom: 8px;
 }
 
 .dots-map__project-card__country span {
